Fix overflow and line spacing

--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -23,7 +23,7 @@
 
 	.mission-vision-values-card {
 		border: 1px solid gray;
-		padding: 2rem;
+		padding: 3rem 2rem 1rem 2rem;
 
 		h3 {
 			font-weight: bold;
@@ -32,6 +32,8 @@
 
 		p {
 			text-align: left;
+			font-size: 1.25rem;
+			line-height: 1.75;
 		}
 	}
 
@@ -44,7 +46,6 @@
 
 #our-team-container {
 	padding: 0 4vw;
-	padding-bottom: 4rem;
 
 	.our-team-title {
 		color: white;
@@ -54,7 +55,8 @@
 		text-align: left;
 	
 		@media screen and (min-width: 768px) {
-			padding: 15vh 0 5vh 0;
+			padding-top: 4rem;
+			font-size: 3rem; 
 		}
 	}
 
@@ -133,8 +135,8 @@
 }
 
 #history-container {
-	width: 100dvw;
-	padding: 0 4vw 4vw;
+	width: 100%;
+	padding: 0 4vw;
 	overflow-x: hidden;
 
 	.header {
@@ -145,12 +147,13 @@
 		text-align: left;
 	
 		@media screen and (min-width: 768px) {
-			padding: 15vh 0 5vh 0;
+			padding-top: 4rem;
 			font-size: 3rem; 
 		}
 	}
 
 	.container {
+		margin: 0;
 		min-width: 100%;
 		display: flex;
 		flex-direction: column;
@@ -449,9 +452,8 @@
 				.content-paragraph {
 					height: 100%;
 					padding: 70px 0;
-					font-size: 24px;
+					font-size: 1.25rem;
 					line-height: 30px;
-					letter-spacing: -0.28px;
 					font-size: Lato;
 
 					@media only screen and (max-width: 1200px) {
